@@ -612,12 +612,25 @@ MAXSTATS=70
 # up or down by class or race.  The default is 18.
 BASEMAXSTAT=18
 
+# The STATCOSTS is a comma-separated list of conditions and points which
+# together describe how many training points it costs to raise a primary
+# stat (str, int, dex, etc) with the Train command.  The condition must 
+# start with a comparison on the current stat of the player, such as 
+# <18, <=23, <25, <99 etc.  This  is followed by a space and the number of 
+# training points it costs to raise the stat to the next point.
+# Default is <18 1, <22 2, <25 3, <99 5
+STATCOSTS = <18 1, <22 2, <25 3, <99 5
+
 # The STARTSTAT value is the starting value for all player 
 # primary stats (str, int, wis, etc).  This value is modified
-# up or down by class or race. If this is 0, the
-# system will allow the starting stats to be rolled 
-# randomly during character creation, with MAXSTATS as a 
-# maximum total. Default is 0.
+# up or down by class or race. 
+# If this is 0 the system will allow the starting stats to be 
+# rolled randomly during character creation, with MAXSTATS as 
+# a maximum total.
+# If this is -1 the system will start all player stats at 3 
+# and allow the player to spent MAXSTATS - 18 points in any
+# way they like, though no stat can be spent above BASEMAXSTAT.
+# Default is 0.
 STARTSTAT=0
 
 # The CHARCREATIONSCRIPTS value is a comma-delimited list of 
