@@ -2370,3 +2370,4 @@ ruthless programmer, and sentenced to a quick death.
 2. GenBook now uses the Message Maker (from the SHELL command) to add book chapters.
 3. (Internal) Database connections can now be kept alive with pings.  See new coffeemud.ini entry: DBPINGINTERVALMINS
 4. Most crafting skills now support a LEARN command to gain the recipes to certain found items.
+5. Players can now spend points to create their new character stats, if you let them.  See coffeemud.ini entry: STARTSTAT
